[package]
name = "colorhash"
version = "0.1.2"
authors = ["Berkus Decker <berkus+crates@madfire.net>"]
description = "A hashing function to convert text strings into colors"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/berkus/colorhash"
license = "MIT OR Apache-2.0"
keywords = ["colors", "converter", "rgb", "hsl"]
categories = ["graphics"]

[dependencies]
byteorder = "1.5.0"
colorsys = "0.6.7"
hmac-sha256 = "1.1.7"

[dev-dependencies]
nanoid = "0.4"
float_eq = "1.0"
